change header's with responsiveness Imported from Changeset 2252

--- a/WarehouseEcommerce/Views/Home/MobileDeviceManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/MobileDeviceManagement.cshtml
@@ -233,7 +233,7 @@
                         <h4><a href="warehouse-management-system">Warehouse Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="warehouse-management-system"><img src="~/img/services/media/warehouse.png"></a>
+                        <a href="warehouse-management-system"><img src="~/img/solutions/Warehouse_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Automate your warehouse daily operation to improve accuracy and fulfillment rates.</p>
@@ -246,7 +246,7 @@
                         <h4><a href="stock-control-system">Stock Control</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/services/media/stockcontrol.png"></a>
+                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Accurate real time stock visibility across multiple sites and locations.</p>
@@ -259,7 +259,7 @@
                         <h4><a href="epod-system">EPoD</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/services/media/epod.png"></a>
+                        <a href="epod-system"><img src="~/img/solutions/EPoD.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Provides reliable and accurate proof of delivery and collection, enabling signature and image capture.</p>
@@ -272,7 +272,7 @@
                         <h4><a href="real-time-location-system">RFID-IoT</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="real-time-location-system"><img src="~/img/services/media/rfid-iot.png"></a>
+                        <a href="real-time-location-system"><<img src="~/img/solutions/Rfid.png"></a>
                     </div>
                     <div class="service-text">
                         <p>RFID Enabled item-level visibility of inventory across the enterprise. TrueVUE provides the foundation for Unified Commerce.</p>
@@ -285,7 +285,7 @@
                         <h4><a href="loss-prevention">Loss Prevention</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="loss-prevention"><img src="~/img/services/media/lossprevention.png"></a>
+                        <a href="loss-prevention"><img src="~/img/solutions/Lose_prevention.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Sensormatic a full Suite of Innovative Solutions Designed to Protect Merchandise and Reduce Shrink.</p>
@@ -298,7 +298,7 @@
                         <h4><a href="ecommerce">eCommerce</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="ecommerce"><img src="~/img/services/media/eCommerce.png"></a>
+                        <a href="ecommerce"><img src="~/img/solutions/Ecommerce.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Integrated web trading platform for B2B or B2C”, apps for mobile/Tablet sales. Marketplace integration.</p>
