--- a/WarehouseEcommerce/Views/Home/RetailSolutions.cshtml
+++ b/WarehouseEcommerce/Views/Home/RetailSolutions.cshtml
@@ -165,7 +165,7 @@
                         <h4><a href="loss-prevention">Loss Prevention</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="loss-prevention"><img src="~/img/services/media/lossprevention.png"></a>
+                        <a href="loss-prevention"><img src="~/img/solutions/Lose_prevention.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Shrink Management as a Service (SMaaS) designed to help enhance productivity.</p>
@@ -178,7 +178,7 @@
                         <h4><a href="stock-control-system">Stock Control</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/services/media/stockcontrol.png"></a>
+                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Accurate real time stock visibility across multiple sites and locations.</p>
@@ -191,7 +191,7 @@
                         <h4><a href="epod-system">EPoD</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/services/media/epod.png"></a>
+                        <a href="epod-system"><img src="~/img/solutions/EPoD.png"></a>
                     </div>
                     <div class="service-text">
                         <p>
@@ -207,7 +207,7 @@
                         <h4><a href="shoppertrak-business-intelligence">Business Intelligence</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="shoppertrak-business-intelligence"><img src="~/img/services/media/businessintelligence.png"></a>
+                        <a href="shoppertrak-business-intelligence"><img src="~/img/solutions/Business_intelligence.png"></a>
                     </div>
                     <div class="service-text">
                         <p>
@@ -223,7 +223,7 @@
                         <h4><a href="digital-signage">Digital Signage</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="digital-signage"><img src="~/img/services/media/digitalsignage.png"></a>
+                        <a href="digital-signage"><img src="~/img/solutions/Digital_signage.png"></a>
                     </div>
                     <div class="service-text">
                         <p>llumineye designed to make high-quality digital signage available to everyone. Ideal for retail, transportation.</p>
@@ -236,7 +236,7 @@
                         <h4><a href="ecommerce">eCommerce</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="ecommerce"><img src="~/img/services/media/eCommerce.png"></a>
+                        <a href="ecommerce"><img src="~/img/solutions/Ecommerce.png"></a>
                     </div>
                     <div class="service-text">
                         <p>
