--- a/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
@@ -6,7 +6,7 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-6">
                         <ul class="top-right">
-                            <li>
+                            <li class="phone-1">
                                 <i class="fa fa-phone"></i>
                                 <span>0333-32 30 202</span>
                             </li>
@@ -36,47 +36,66 @@
         <div class="main-menu-area" id="navbar">
             <div class="pr-30 pl-30">
                 <div class="row ptb-10 navbar-row">
-                    <div class="logo-div">
+                    <div class="col-md-3 col-sm-3 col-lg-2 logo-div">
                         <div class="logo">
                             <a href="home"><img src="~/img/logo/logo.png" alt="" width="200" /></a>
                         </div>
                     </div>
-                    <div class="top-menu">
+                    <div class="col-md-6 col-sm-6 col-lg-6 top-menu">
                         <div class="main-menu">
                             <nav id="primary_nav_wrap" class="header-nav">
                                 <ul>
                                     <li>
                                         <a href="#">Solutions</a>
                                         <ul id="in_dropdown">
-                                            <li><a href="warehouse-management-system">Warehouse Management</a></li>
-                                            <li><a href="order-management-system">Order Management</a></li>
-                                            <li><a href="stock-control-system">Stock Management</a></li>
-                                            <li><a href="epod-system">EPoD</a></li>
-                                            <li><a href="fleet-management-system">Fleet Tracking & Driver Management</a></li>
-                                            <li><a href="yard-management">Yard Managemen</a></li>
-                                            <li><a href="ecommerce">ECommerce</a></li>
-                                            <li><a href="epos-self-service">EPoS & Self Service</a></li>
-                                            <li><a href="mobile-van-sales">Field/Van Mobile Sales</a></li>
-                                            <li><a href="real-time-location-system">Asset Location</a></li>
-                                            <li><a href="HR-time-and-attendance">Human Resources</a></li>
-                                            <li><a href="mobile-device-management">Mobile Device Management</a></li>
-                                            <li><a href="digital-signage">Digital Signage</a></li>
-                                            <li><a href="shoppertrak-business-intelligence">Business Intelligence</a></li>
-                                            <li><a href="loss-prevention">Loss Prevention</a></li>
-                                            <li><a href="truevue-retail-rfid-solution">RFID Retail Inventory</a></li>
-                                        </ul>
+                                            <div class="div1 in-dropdown-div">
+                                                <li><a href="warehouse-management-system">Warehouse Management</a></li>
+                                                <li><a href="order-management-system">Order Management</a></li>
+                                                <li><a href="stock-control-system">Stock Management</a></li>
+                                                <li><a href="epod-system">EPoD</a></li>
+                                            </div>
+                                            <div class="div2 in-dropdown-div">
+                                                <li><a href="mobile-van-sales">Field / Van Mobile Sales</a></li>
+                                                <li><a href="yard-management">Yard Managemen</a></li>
+                                                <li><a href="ecommerce">ECommerce</a></li>
+                                                <li><a href="epos-self-service">EPoS & Self Service</a></li>
+                                            </div>
+                                            <br />
+                                            <div class="div3 in-dropdown-div">
+                                                <li><a href="truevue-retail-rfid-solution">RFID Retail Inventory</a></li>
+                                                <li><a href="real-time-location-system">Asset Location</a></li>
+                                                <li><a href="HR-time-and-attendance">Human Resources</a></li>
+                                                <li><a href="mobile-device-management">Mobile Device Management</a></li>
+                                            </div>
+                                            <div class="div4">
+                                                <li><a href="digital-signage">Digital Signage</a></li>
+                                                <li><a href="shoppertrak-business-intelligence">Business Intelligence</a></li>
+                                                <li><a href="loss-prevention">Loss Prevention</a></li>
+                                                <li><a href="fleet-management-system">Fleet Tracking Management</a></li>
+                                            </div>
 
+
+                                        </ul>
                                     </li>
                                     <li><a href="services">Services</a></li>
-                                    <li><a href="getstarted">Get Started</a></li>
                                     <li><a href="blog">Blog & News</a></li>
                                     <li><a href="about-us">About Us</a></li>
                                     <li><a class="hardware-active" href="https://shop.ganedata.co.uk">Hardware</a></li>
+                                    <li class="book-demo-1"><a href="getstarted">Book A Demo</a></li>
                                     @*<li><a href="#"><i class="fa fa-search"></i></a></li>*@
                                 </ul>
                             </nav>
                         </div>
                         <div class="mobile-menu-area"></div>
+                    </div>
+                    <div class="col-md-3 col-sm-3 col-lg-4 text-right phone-n-demo">
+                        <ul class="phone-2">
+                            <li>
+                                <i class="fa fa-phone"></i>
+                                <span>0333-32 30 202</span>
+                            </li>
+                        </ul>
+                            <span class="book-demo-2"><a href="getstarted">Book A Demo</a></span>
                     </div>
                 </div>
             </div>
