--- a/WarehouseEcommerce/Views/Home/BusinessIntelligence.cshtml
+++ b/WarehouseEcommerce/Views/Home/BusinessIntelligence.cshtml
@@ -63,7 +63,7 @@
                         <h4><a href="warehouse-management-system">Warehouse Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="warehouse-management-system"><img src="~/img/services/media/warehouse.png"></a>
+                        <a href="warehouse-management-system"><img src="~/img/solutions/Warehouse_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Automate your warehouse daily operation to improve accuracy and fulfillment rates.</p>
@@ -76,7 +76,7 @@
                         <h4><a href="stock-control-system">Stock Control</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/services/media/stockcontrol.png"></a>
+                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Accurate real time stock visibility across multiple sites and locations.</p>
@@ -89,7 +89,7 @@
                         <h4><a href="epod-system">EPoD</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/services/media/epod.png"></a>
+                        <a href="epod-system"><img src="~/img/solutions/EPoD.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Provides reliable and accurate proof of delivery and collection, enabling signature and image capture.</p>
@@ -102,7 +102,7 @@
                         <h4><a href="digital-signage">Digital Signage</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="digital-signage"><img src="~/img/services/media/digitalsignage.png"></a>
+                        <a href="digital-signage"><img src="~/img/solutions/Digital_signage.png"></a>
                     </div>
                     <div class="service-text">
                         <p>llumineye designed to make high-quality digital signage available to everyone. Ideal for retail, transportation.</p>
@@ -115,7 +115,7 @@
                         <h4><a href="real-time-location-system">RFID-IoT</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="real-time-location-system"><img src="~/img/services/media/rfid-iot.png"></a>
+                        <a href="real-time-location-system"><img src="~/img/solutions/Rfid.png"></a>
                     </div>
                     <div class="service-text">
                         <p>RFID Enabled item-level visibility of inventory across the enterprise. TrueVUE provides the foundation for Unified Commerce.</p>
@@ -128,7 +128,7 @@
                         <h4><a href="ecommerce">eCommerce</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="ecommerce"><img src="~/img/services/media/eCommerce"></a>
+                        <a href="ecommerce"><img src="~/img/solutions/Ecommerce.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Integrated web trading platform for B2B or B2C”, apps for mobile/Tablet sales. Marketplace integration.</p>
