--- a/WarehouseEcommerce/Views/Home/LossPrevention.cshtml
+++ b/WarehouseEcommerce/Views/Home/LossPrevention.cshtml
@@ -82,7 +82,7 @@
                         <h4><a href="epos-self-service">EPOS & Self Service</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="epos-self-service"><img src="~/img/services/media/epos.png"></a>
+                        <a href="epos-self-service"><img src="~/img/solutions/Epose_self_service.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Single integrated cloud platform cloud for managing your hospitality or retail estate.</p>
@@ -95,7 +95,7 @@
                         <h4><a href="stock-control-system">Stock Control</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/services/media/stockcontrol.png"></a>
+                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Accurate real time stock visibility across multiple sites and locations.</p>
@@ -108,7 +108,7 @@
                         <h4><a href="epod-system">EPoD</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/services/media/epod.png"></a>
+                        <a href="epod-system"><img src="~/img/solutions/EPoD.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Provides reliable and accurate proof of delivery and collection, enabling signature and image capture.</p>
@@ -121,7 +121,7 @@
                         <h4><a href="shoppertrak-business-intelligence">Business Intelligence</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="shoppertrak-business-intelligence"><img src="~/img/services/media/businessintelligence.png"></a>
+                        <a href="shoppertrak-business-intelligence"><img src="~/img/solutions/Business_intelligence.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Help your business to harness the power of data, inventory and loss prevention and turn insights into outcomes.</p>
@@ -134,7 +134,7 @@
                         <h4><a href="truevue-retail-rfid-solution">Retail Solutions</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="truevue-retail-rfid-solution"><img src="~/img/services/media/retailsolutions.png"></a>
+                        <a href="truevue-retail-rfid-solution"><img src="~/img/solutions/Retail_solutions.png"></a>
                     </div>
                     <div class="service-text">
                         <p>RFID Inventory intelligence enables Smarter Decision Making, enable retailers to harness data.</p>
@@ -147,7 +147,7 @@
                         <h4><a href="ecommerce">eCommerce</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="ecommerce"><img src="~/img/services/media/eCommerce.png"></a>
+                        <a href="ecommerce"><img src="~/img/solutions/Ecommerce.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Integrated web trading platform for B2B or B2C”, apps for mobile/Tablet sales. Marketplace integration.</p>
