Added a comments column in the acounts list grid Imported from Changeset 2253

--- a/WMS/Views/Account/_AccountList.cshtml
+++ b/WMS/Views/Account/_AccountList.cshtml
@@ -90,6 +90,13 @@
             c.Caption = "Account Balance";
             c.ColumnType = MVCxGridViewColumnType.SpinEdit;
         });
+
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "Comments";
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+        });
+
         settings.Columns.Add(c => {
 
             c.FieldName = "OwnerName";
