design login and signup page Imported from Changeset 2254

--- a/WarehouseEcommerce/Areas/Shop/Content/Site.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/Site.css
@@ -236,7 +236,7 @@
 .hover-cate {
     height:100%;
 }
-    .hover-cate select {
+.hover-cate select {
         width: 100%;
         height: 100%;
         border: none;
@@ -252,4 +252,137 @@ ul.mhp-menu {
 }
 .mhp-menu li:hover {
     background-color: #1455a6;
+}
+.login-row {
+    background-color: #fafafa;
+    width: 100%;
+    padding: 25px;
+    margin-left: unset;
+    margin-right: unset;
+}
+.login-col {
+    margin: 0 auto;
+    /*padding: 60px 16% 0 16%;*/
+    float: unset;
+}
+@media (max-width: 800px) {
+    .login-col {
+        margin: unset;
+        padding: 60px 0 0 0 !important;
+    }
+}
+.register-div {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.inner {
+    width: 331px !important;
+    display: inline-block;
+}
+.inner input {
+        height: 56px;
+        border: 1px solid #e4e9f2;
+        background-color: #fff;
+        font-size: 15px !important;
+        margin-bottom: 15px;
+        width: 331px;
+}
+.inner input:hover {
+    border: 1px solid #1455a6 !important;
+}
+.login-button {
+    height: 56px;
+    width: 331px;
+    color: #fff;
+    font-weight: 600;
+    font-size: 20px;
+}
+    .login-button:hover {
+        color: #fff;
+        box-shadow: 0 5px 12px 0 #382e2e !important;
+        transform: scale(1.01);
+    }
+.remember-forget {
+    display: flex;
+    justify-content: space-between;
+    width: 331px;
+    font-size: 12px;
+    margin-top: 20px;
+    color: #acacac;
+}
+.checkbox-div {
+    display: flex;
+}
+    .checkbox-div input {
+        height: unset !important;
+        width: unset !important;
+        margin-right: 5px;
+    }
+.forget-password {
+    color: #acacac !important;
+}
+.forget-password:hover {
+        color: #000 !important;
+}
+.login-google button.btn {
+    width: 100%;
+    height: 46px;
+    color: #fff;
+    font-weight: 600;
+}
+.btn-goggle:hover {
+    color: #fff;
+    box-shadow: 0 5px 12px 0 rgba(222, 23, 78, 0.4) !important;
+    transform: scale(1.01);
+}
+.btn-fb:hover {
+    color: #fff;
+    box-shadow: 0 5px 12px 0 rgba(23,70,222,.4) !important;
+    transform: scale(1.01);
+}
+.login-logo {
+    width: 331px;
+    display: inline-block;
+    margin-bottom: 25px;
+}
+@media (max-width: 388px) {
+    .login-logo {
+        width: 250px !important;
+    }
+    .inner {
+        width: 250px !important;
+    }
+.inner input {
+   width: 250px !important;
+ }
+    .login-button {
+        width: 250px !important;
+    }
+    .remember-forget {
+        width: 250px !important;
+        font-size: 11px;
+    }
+    .checkbox-div input {
+        width: unset !important;
+    }
+}
+@media(max-width:768px) {
+    .login-col {
+        padding: 11px 0 0 0 !important;
+    }
+    .register-div {
+        align-items: center;
+    }
+}
+.footer-row {
+    background-color: #000000;
+    padding: 15px 0;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 101%;
+    color: white;
+    text-align: center;
 }
