--- a/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
@@ -2432,12 +2432,13 @@ footer #contact li {
   color: #4f4f4f;
 }
 
-.social li a {
-  display: block;
-  color: #4f4f4f;
-  position: relative;
-  top: 3px;
-}
+    .social li a {
+        display: block;
+        color: #4f4f4f;
+        position: relative;
+        top: 10px;
+        left: 0.5px;
+    }
 
 .social li:hover {
   background: #1455a6;
@@ -4392,8 +4393,8 @@ body.active .sidenav {
 }
 
 .seperator {
-  margin-bottom: 30px;
-  margin-top: 20px;
+    margin-bottom: 22px;
+    margin-top: 15px;
 }
 
 .seperator:before {
