--- a/WMS/Views/Shared/_OrderPopups.cshtml
+++ b/WMS/Views/Shared/_OrderPopups.cshtml
@@ -4,7 +4,7 @@
     {
         settings.Name = "ModelOrdDetail";
         settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
-        settings.CallbackRouteValues = new { Controller = "OrderDetail", Action = "_OrderDetail"};
+        settings.CallbackRouteValues = new { Controller = "OrderDetail", Action = "_OrderDetail" };
 
 
         settings.Width = 800;
@@ -389,7 +389,7 @@
     {
         settings.Name = "ModalPopupAllocateMarketJob";
         settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
-        settings.CallbackRouteValues = new { Controller = "Markets", Action ="_AllocateMarketJobPartial", Method = "GET" };
+        settings.CallbackRouteValues = new { Controller = "Markets", Action = "_AllocateMarketJobPartial", Method = "GET" };
         settings.Width = 700;
         settings.Height = 250;
         settings.AllowDragging = true;
@@ -590,3 +590,32 @@
 
         //settings.ClientSideEvents.CloseUp = "function(s, e){ ASPxClientEdit.ClearEditorsInContainer(null, '', true); }";
     }).GetHtml()
+
+
+
+@Html.DevExpress().PopupControl(
+    settings =>
+    {
+        settings.Name = "AssignPickerPopUp";
+        settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
+        settings.CallbackRouteValues = new { Controller = "SalesOrders", Action = "_AssignPicker" };
+
+
+        settings.Width = 500;
+        settings.Height = 300;
+        settings.AllowDragging = true;
+        settings.CloseAction = CloseAction.CloseButton;
+        settings.CloseOnEscape = true;
+        settings.PopupAnimationType = DevExpress.Web.AnimationType.None;
+        settings.ShowHeader = false;
+        settings.Modal = true;
+        settings.AutoUpdatePosition = true;
+        settings.PopupHorizontalAlign = PopupHorizontalAlign.WindowCenter;
+        settings.PopupVerticalAlign = PopupVerticalAlign.WindowCenter;
+        settings.ScrollBars = System.Web.UI.WebControls.ScrollBars.Vertical;
+        settings.EnableClientSideAPI = true;
+        settings.ClientSideEvents.BeginCallback = "function(s,e){ beginpickerCallBack(s,e); }";
+        //settings.ClientSideEvents.EndCallback = "endpickerCallback";
+
+//settings.ClientSideEvents.CloseUp = "function(s, e){ ASPxClientEdit.ClearEditorsInContainer(null, '', true); }";
+}).GetHtml()
