--- a/WarehouseEcommerce/Areas/Shop/Views/User/Login.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/User/Login.cshtml
@@ -46,7 +46,7 @@
     <div class="row login-row">
 
         <div class="register-div">
-            <div class="">
+            <div class="mb-5">
                 <a class="" href="#">Help</a> |
                 <a class="" href="@Url.Action("Create","User", new {PlaceOrder=(bool?)ViewBag.PlaceOrders})">Register</a>
             </div>
