Imported from Changeset 2257

--- a/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/app/css/app.css
@@ -4388,8 +4388,9 @@ body.active .sidenav {
   }
 }
 .seperator span {
-  font-size: 16px;
-  font-weight: 600;
+    font-size: 16px;
+    font-weight: 600;
+    color: #545454;
 }
 
 .seperator {
