--- a/WarehouseEcommerce/Areas/Shop/Views/User/Login.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/User/Login.cshtml
@@ -76,6 +76,10 @@
                         <div class="inner">
 
                             <div class="login-google">
+                                <div class="signup-text-div">
+                                <p  class="signup-text">Don’t have an account yet ?</p>
+                                <a href="/Shop/User/Create">Sign Up</a>
+                                </div>
                                 <button class="btn btn-primary btn-fb">
                                     <i class="fa fa-facebook"></i>CONNECT WITH FACEBOOK
                                 </button>
@@ -102,7 +106,7 @@
                                 <div data-v-5f85c551="" class="remember-forget">
                                     <div class="checkbox-div">
                                         <input type="checkbox" class="rectangle ">
-                                        <p data-v-5f85c551="" class="remember-me">Remember me</p>
+                                        <p class="remember-me">Remember me</p>
                                     </div>
                                     <a class="forget-password" role="button">Forgot Password ?</a>
                                 </div>
