--- a/WarehouseEcommerce/Areas/Shop/Content/Site.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/Site.css
@@ -314,6 +314,10 @@ ul.mhp-menu {
         .remove-inner input:hover {
             border: 1px solid #1455a6 !important;
         }
+    .signup-single-side h3{
+    color: #545454;
+    font-weight: 600;
+}
 @media(max-width:800px){
     .signup-single-side {
         width:100%;
@@ -358,11 +362,17 @@ ul.mhp-menu {
     display: flex;
     justify-content: space-between;
     font-size: 13px;
-    margin-top: 20px;
+    margin-top: 27px;
+    margin-bottom: 11px;
 }
     .privacy-policy a {
-        font-weight:bold;
+        font-weight: 500;
+        color: #545454;
     }
+        .privacy-policy a:hover {
+            cursor: pointer;
+            color: #1455a6
+        }
     .checkbox-div {
         display: flex;
     }
@@ -383,9 +393,9 @@ ul.mhp-menu {
 .forget-password {
     color: #acacac !important;
 }
-.forget-password:hover {
-        color: #000 !important;
-}
+    .forget-password:hover {
+        color: #1455a6 !important;
+    }
 .login-google button.btn {
     width: 100%;
     height: 46px;
@@ -451,4 +461,31 @@ ul.mhp-menu {
 }
 .mb-5 {
     margin-bottom:5px;
+}
+.signup-text-div {
+    white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+}
+.signup-text {
+    font-size: 13px;
+    letter-spacing: .15px;
+    line-height: 18px;
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 20px;
+    color: #acacac;
+}
+.signup-text-div a {
+    padding-left: 10px;
+    font-weight: 800;
+    color: #545454;
+    font-family: sans-serif;
+}
+.signup-text-div a:hover {
+    color: #1455a6;
+}
+.mt-30 {
+    margin-top: 30px;
 }
