added manufacturer table and  manufacturer id in product brnad is added as well Imported from Changeset 2259

--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
@@ -114,6 +114,7 @@
 </html>
 <script>
     $(document).ready(function () {
+        debugger;
         $("#cart").hover(function () {
             $('#cart').addClass('open');
         });
