--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
@@ -54,7 +54,7 @@
                     <h1>@Model.Name</h1>
                     <hr class="hr-line">
                     <ul class="list-unstyled">
-                        <li><span class="text-decor">Brands:</span><a href="#" class="textdeb">@Model.ManufacturerPartNo</a></li>
+                        <li><span class="text-decor">Brands:</span><a href="#" class="textdeb">@(Model.ProductManufacturer==null?"":Model.ProductManufacturer.Name)</a></li>
                         <li><span class="text-decor">Product Code:</span>@Model.SKUCode</li>
                         <li><span class="text-decor">Bar Code:</span>@Model.BarCode</li>
                         <li><span class="text-decor">Availability:</span>@(Model.InventoryStocks.Count == 0 ? "Not Avaialable" : "In Stock")</li>
